--- a/css/main.css
+++ b/css/main.css
@@ -27,7 +27,7 @@ h3{
 }
 
 header {
-  background: url("../img/golden-landing-1.png");
+  background: url("../img/golden-landing-1.jpeg");
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
