--- a/css/main.css
+++ b/css/main.css
@@ -36,6 +36,33 @@ header {
   height: 100vh;
 }
 
+@keyframes nav{
+  0%{
+    top: -25%;
+  }
+  100%{
+    top: 0%
+  }
+}
+
+@keyframes tagline{
+  0%{
+    opacity: 0%;
+    
+  }
+
+  100%{
+    opacity: 100%;
+  }
+
+}
+
+
+nav{
+  animation: nav;
+  animation-duration: 2s;
+}
+
 .silhouette{
   height: 30px;
   margin: 0 10px;
@@ -69,6 +96,8 @@ header {
   text-align: center;
   width: 100%;
   color: black;
+  animation: tagline;
+  animation-duration: 4s;
 }
 
 #about{
